--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(16px + 0vmin);
+  font-size: calc(16px + 2vmin);
+  color: white;
+}
+
+.image-container {
+  font-size: 16px;
+  line-height: 9px;
   color: white;
   font-family: monospace;
 }
