--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  overflow: auto;
 }
 
 .App-header {
@@ -9,13 +10,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(16px + 2vmin);
+  font-size: calc(12px);
   color: white;
 }
 
 .image-container {
-  font-size: 10px;
-  line-height: 5px;
+  line-height: 1em;
   color: white;
-  font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.ascii-row {
+  max-width: 200%;
+  min-width: 100%;
 }
